feat: Add Facebook Pixel noscript tag
Includes the Facebook Pixel noscript tag in the index.html file. This ensures that tracking events are still captured for users who have JavaScript disabled.

--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@ fbq('track', 'PageView');
 </script>
 </head>
   <body>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=1140877928120139&ev=PageView&noscript=1"
+/></noscript>
+
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
