feat: Track 'Lead' event for Facebook Pixel
Adds a 'Lead' event to the Facebook Pixel tracking in index.html. This change aims to better understand user engagement and conversion funnels on the Blurto resonance test page.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
 fbq('init', '1140877928120139');
 fbq('track', 'PageView');
+fbq('track', 'Lead');
 </script>
 
 <!-- End Meta Pixel Code -->
